[gd_scene load_steps=8 format=3 uid="uid://c8thaxsyki1fn"]

[ext_resource type="Script" uid="uid://o3rs0wbm616k" path="res://scenes and scripts/Alien2.gd" id="1_xievk"]
[ext_resource type="Texture2D" uid="uid://cjd2fbcl4rn61" path="res://textures/alien2_walk1.png" id="2_dxmsx"]
[ext_resource type="Texture2D" uid="uid://dpvf6njjweihw" path="res://textures/alien2_walk2.png" id="3_24r6m"]
[ext_resource type="AudioStream" uid="uid://dy4uangnsj5rp" path="res://audio/enemy_laser.wav" id="4_fr8tr"]
[ext_resource type="AudioStream" uid="uid://b22c5pe83364o" path="res://audio/enemy_death.wav" id="5_pud6f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ka4ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dxmsx")
}, {
"duration": 1.0,
"texture": ExtResource("3_24r6m")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jydnq"]
size = Vector2(50, 48)

[node name="Alien2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_xievk")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_ka4ja")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jydnq")

[node name="RocketPosition" type="Node2D" parent="."]
position = Vector2(0, 21)

[node name="Timer" type="Timer" parent="."]

[node name="rocket_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fr8tr")
volume_db = -18.0

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pud6f")
volume_db = -15.0
pitch_scale = 1.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="death_sound" to="." method="_on_death_sound_finished"]
